--- a/starter_project/package.json
+++ b/starter_project/package.json
@@ -2,6 +2,7 @@
   "name": "example-project",
   "version": "1.0.0",
   "main": "index.js",
+  
   "scripts": {
     "test": "jest",
     "start": "node src/server/index.js",
@@ -13,25 +14,27 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "clean-webpack-plugin": "^4.0.0",
     "cors": "^2.8.5",
-    "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^5.6.0",
     "node-fetch": "^3.3.2",
-    "style-loader": "^3.3.4",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^8.3.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "node-sass": "^9.0.0",
     "sass": "^1.72.0",
-    "sass-loader": "^14.1.1",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
     "webpack": "^5.90.3",
     "webpack-dev-server": "^5.0.2",
     "workbox-webpack-plugin": "^7.0.0"
   }
+  
 }
